@@ -128,6 +128,7 @@
     <ClCompile Include="..\..\..\Source\AudioCardOut\TestCardsOutputFromMultiScenes.cpp" />
     <ClCompile Include="..\..\..\Source\AudioCardOut\TestCardsOutputUnloadScene.cpp" />
     <ClCompile Include="..\..\..\Source\AudioCardOut\TestAudioOutput.cpp" />
+    <ClCompile Include="..\..\..\Source\AudioVideoSync\TestAudioVideoInputSync.cpp" />
     <ClCompile Include="..\..\..\Source\main.cpp" />
   </ItemGroup>
   <ItemGroup>
